--- a/template/Cargo.toml
+++ b/template/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#template = { path = "../template" }
+
 secp256k1 = { version = "0.27.0", features = [ "global-context", "rand-std", "bitcoin-hashes-std"] }
 serde = { version = "1.0.163", features = ["derive"] }
 serde_bytes = "0.11.9"
@@ -21,3 +21,6 @@ ethers = "2.0.8"
 hex-literal = "0.4.1"
 k256 = "0.13.1"
 tokio = { version = "1.28.1", features = ["full"] }
+
+[lib]
+crate-type = ["cdylib", "rlib"]
