--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,17 @@
 [workspace]
+members = [
+    "factory",
+    "execute"
+]
 resolver = "2"
 
-members = [
-   "template",
-   "execute"
-]
+[workspace.dependencies]
+hex = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+clap = { version = "4.4", features = ["derive"] }
+k256 = { version = "0.13.1", features = ["ecdsa"] }
+sha3 = "0.10.8"
+rand = "0.8"
+tokio = { version = "1.0", features = ["full"] }
+secp256k1 = "0.28.0"
