--- a/execute/Cargo.toml
+++ b/execute/Cargo.toml
@@ -3,14 +3,12 @@ name = "execute"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-serde = { version = "1.0.163", features = ["derive"] }
-serde_bytes = "0.11.9"
-hex = "0.4.3"
-serde_json = "1"
-template = {path = "../template" , default-features = false}
+factory = { path = "../factory" }
+hex = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+clap = { workspace = true }
 
 [[bin]]
 name = "execute"
