--- a/factory/Cargo.toml
+++ b/factory/Cargo.toml
@@ -10,6 +10,7 @@ hex = { workspace = true }
 serde = { workspace = true }
 rand = { workspace = true }
 secp256k1 = { workspace = true }
+ethers = { workspace = true }
 bincode = "1.3"
 serde_json = { workspace = true }
 
